# sutom_discord_bot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  rust.yml
src/: main.rs
