[package]
name = "sutom-dbot"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
regex = "1.6.0"
chrono = "0.4.22"
lazy_static = "1.4.0"
chrono-tz = "0.6.3"
